Risk - Yura Mamyrin (yura@yura.net)

CURRENT VERSION:

	Risk Game:	1.1.1.3
	 * Save:	8
	 * Network:	11

	Android		25
	Flash GUI:	2
	Swing GUI:	2
	Simple GUI:	1.1.1.1
	Increment1GUI:	1.1.1.1
	CommandLine:	1.0.4.1

1.1.1.3

	Brazilian Portuguese added by Ricardo Gomes Ponce

	Android 25 timeout for turn in multiplayer game
	Android 24 lib missing in v23
	Android 23 push notifications for online play
		   Grasshopper update to send jpg and not png
		   http.keepAlive=false android hack added
		   savegame for / or \ in name fix
		   nullpointer in desktoppane hack added
		   do not spam logs with known MapServer connections errors
	Android 22 online multiplayer Beta for en_GB users

1.1.1.2

	italian update by Marco Barbarino
	when publishing maps, it checks to see if the map name is already taken
	missions translations update
	when you update to a new version it does not replace the game.ini
	do not give 414 errors on really large numbers of maps
	when loading a cards file into the map editor, the mission text for destroy a player is displayed incorrectly
	fixed: in flashGUI closing the game when a game can be continued does not close the game
	Ukrainian added and russian updated by Oleksandra Spiegler

	Android 21 grasshopper update
		   new languages - Ukrainian
		   another maps not loading fix for color white corruption 
	Android 20 maps not loading because of currupted download error fixed,
		   (files were currupted because of operator transcoding)
	Android 19 more clear when selecting a capital
		   only load .save game save files, do not even try to load others
		   do not crash on "application/xml" mime type from server
		   shows new line as a new line and not a [] in the MapStore

1.1.1.1

	in p2p online play, when someone disconnects, the others can carry on playing
	in italian cards, there is no limit to the number of cards you can hold
	FlashGUI does not show crapAI as a option as it is not needed for normal play